k8s/mysql.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysqldb-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysqldb
  template:
    metadata:
      labels:
        app: mysqldb
    spec:
      containers:
        - name: mysqldb
          image: bitnami/mysql:8.0.33-debian-11-r0
          ports:
            - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: mysqldb
spec:
  selector:
    app: mysqldb
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
  type: NodePort
