k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: comforte.johnydev.com
      http:
        paths:
          - path: /path
            pathType: Prefix
            backend:
              service:
                name: app-service
                port:
                  name: http
  ingressClassName: nginx
  controller:
    kind: Deployment
    podAnnotations:
      prometheus.io/path: "/metrics"
      prometheus.io/port: "10254"
      prometheus.io/scrape: "true"
    stats:
      enabled: true
    metrics:
      enabled: true
    publishService:
      enabled: true
      publishServicePath: "$(POD_NAMESPACE)/nginx-ingress-controller"
    service:
      enableHttp: "true"
      enableHttps: "true"
      externalTrafficPolicy: Local
      type: LoadBalancer
    autoscaling:
      enabled: true
      maxReplicas: 4
      minReplicas: 1
      targetCPUUtilizationPercentage: 85
    resources:
      requests:
        cpu: 150m
        memory: 128Mi
      limits:
        cpu: 1
        memory: 512Mi
    updateStrategy:
      type: RollingUpdate
      rollingUpdate:
        maxSurge: 1
        maxUnavailable: 0
    admissionWebhooks:
      enabled: false
  rbac:
    create: true
  defaultBackend:
    enabled: false
